# SigFrota

./: .env.example  .gitignore  .replit  COMECE_AQUI.md  ERS_SisGestaoFrota_v1.0.docx  docker-compose.yml  manage.py  pylist.txt  requirements.txt  senhas.txt
backend/: .env.example  Dockerfile  add_columns.py  alembic.ini  alembic_output.txt  check_columns.py  check_ids.py  check_imports.txt  check_schema.py  check_users.py  check_usuarios_schema.py  create_admin_sqlite.py  create_admin_user.py  create_test_user.py  fix_schema.py  fix_schema_v2.py  pip_list.txt  pyproject.toml  recreate_result.txt  recreate_veiculos.py  reset_veiculos_table.py  run.py  run_migration.py  seed_marcas_modelos.py  seed_parametrizacoes.py  setup_admin.py  sigfrota.db  sigfrota_dev.db  sync_db.py  test_import.py
backend/alembic/: env.py
backend/alembic/versions/: 000_create_base_tables.py  001_add_status_veiculo.py  002_add_tipo_veiculo_nome.py  003_add_frota_fields.py  004_add_tecnico_ipva_fields.py  004_recreate_veiculos_full_schema.py  004_remove_cedido_tipo_frota.py  005_make_prefixo_nullable.py  006_add_condutor_documentos.py  007_update_condutor_lotacao.py
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/scripts/: change_admin_password.py  check_me.py  check_user_async.py  seed_veiculos_lookups.py  set_admin_1234.py  test_auth_service.py  test_create_veiculo.py  test_login.py  test_login_client.py  test_proxy_targets.py
backend/tests/: conftest.py  test_auth.py
(+174 files in other folders)
